update page and add desing

--- a/service.html
+++ b/service.html
@@ -26,54 +26,71 @@
 
   <!-- Header -->
   <header class="bg-dark text-white text-center py-5">
-    <h1 class="display-4">Our Services</h1>
-    <p class="lead">Reliable construction solutions tailored to your needs.</p>
+    <h1 class="display-4">Our Skilled Services</h1>
+    <p class="lead">Reliable construction solutions tailored to your needs.
+    </p>
   </header>
 
-  <!-- Service 1 -->
-  <section class="service-section bg-light">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <img src="images/project12.jpg" alt="Room Addition" class="service-img">
-        </div>
-        <div class="col-md-6 service-content">
-          <h3>Room Addition Services</h3>
-          <p>Expand your home with professionally planned and built room additions that blend perfectly with your existing structure.</p>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <!-- Service 2 -->
-  <section class="service-section">
-    <div class="container">
-      <div class="row align-items-center flex-md-row-reverse">
-        <div class="col-md-6">
-          <img src="images/project10.jpg" alt="Patio Cover" class="service-img">
-        </div>
-        <div class="col-md-6 service-content">
-          <h3>Patio Cover Services</h3>
-          <p>Enjoy outdoor comfort with stylish and durable patio covers that protect your space from sun and rain.</p>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <!-- Service 3 -->
-  <section class="service-section bg-light">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <img src="images/project11.jpg" alt="Roofing" class="service-img">
-        </div>
-        <div class="col-md-6 service-content">
-          <h3>Roofing Services</h3>
-          <p>Our expert roofing team ensures solid, long-lasting roofs for homes, offices, and commercial buildings.</p>
-        </div>
+<section id="our-services" class="py-5 bg-light">
+  <div class="container">
+  
+    <!-- Service 2 -->
+    <div class="row align-items-center mb-5 flex-md-row-reverse">
+      <div class="col-md-6">
+        <img src="images/plumbing.webp" alt="Plumbing Services" class="img-fluid rounded shadow">
+      </div>
+      <div class="col-md-6">
+        <h4 class="fw-semibold">Plumbing & Pipefitting</h4>
+        <p class="text-muted">
+          From residential to industrial pipelines, our skilled plumbers and pipefitters handle installation, maintenance, and repairs with care.
+        </p>
       </div>
     </div>
-  </section>
+
+    <!-- Service 3 -->
+    <div class="row align-items-center mb-5">
+      <div class="col-md-6">
+        <img src="images/civil-works.webp" alt="Mason, Carpentry, Gypsum" class="img-fluid rounded shadow">
+      </div>
+      <div class="col-md-6">
+        <h4 class="fw-semibold">Civil & Finishing Works</h4>
+        <p class="text-muted">
+          Our team includes masons, carpenters, finishing carpenters, painters, and gypsum experts who bring quality to every build.
+        </p>
+      </div>
+    </div>
+
+    <!-- Service 4 -->
+    <div class="row align-items-center mb-5 flex-md-row-reverse">
+      <div class="col-md-6">
+        <img src="images/electrical.jpeg" alt="Electrical & Ducting" class="img-fluid rounded shadow">
+      </div>
+      <div class="col-md-6">
+        <h4 class="fw-semibold">Electrical & Ducting</h4>
+        <p class="text-muted">
+          We offer skilled electricians and ductmen for complete MEP solutions, ensuring safety, performance, and compliance.
+        </p>
+      </div>
+    </div>
+
+    <!-- Service 5 -->
+    <div class="row align-items-center mb-5">
+      <div class="col-md-6">
+        <img src="images/manpower.jpg" alt="Manpower Supply" class="img-fluid rounded shadow">
+      </div>
+      <div class="col-md-6">
+        <h4 class="fw-semibold">Manpower Supply</h4>
+        <p class="text-muted">
+          We provide skilled and unskilled manpower for civil, MEP, and oil & gas projects including scaffolders, steel fixers, foremen, and helpers.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
   <!-- Add more services here as needed... -->
 
