--- a/about.html
+++ b/about.html
@@ -17,7 +17,11 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">🏗️ Construction Co.</a>
+      
+       <a class="navbar-brand d-flex align-items-center" href="#">
+  <img src="images/logo.jpeg" alt="Logo" width="20" height="20" class="me-2">
+  AL MUKTASHF GENERAL CONTRACTING SERVICES
+</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,10 +46,65 @@
     <div class="container">
       <h2>Who We Are</h2>
       <p>
-        Construction Co. is a trusted name in the construction industry with over 10 years of experience. We specialize in residential, commercial, and industrial projects across Bangladesh. Our team is committed to delivering high-quality work on time and within budget.
+        We are glad to introduce our company "AL MUKTASHFGENERALCONTRACTING SERVICES " CR NO: 173693
+Qatar, our home country. One of the fastest growing country in theworld. Thecountry is full of opportunity for everyone. Thats why we see a hugegrowthofinfrastructure here. To fullfill this high demand, Our companyworkingcontinuously to make sure we build a better Qatar. Witnessing Qatar’s remarkable economic development has been anexcitingexperience. We are fortunate to live in one of the world’s fastestgrowingeconomies, one that is characterized by increasingly diverse marketsandinfrastructure development. Qatar is a country blessed not only withgreatnatural resources but with visionary leadership and, since 2008, a roadmapforeconomic and social prosperity in the Qatar National Vision 2030. Our diversified activities continue to grow to ignite the ambitionandprosperity of the State of Qatar itself, with the guidance andunwaveringsupport of our wise leadership H.H. Sheikh Tamim bin Hamad Al Thani, TheEmir of the State of Qatar. The development of our company can be wholeheartedly attributedtothecommitment of our people who are the main driving force behindoursuccess.We consistently set ourselves demanding targets and work hardtoachievethem. In an era of advanced technologies and new techniques, we continuouslystrivefor innovation and enhanced efficiency. We will, God willing, continue to do our best to better our standards inservingour clients and continue to stay true to our promise of delivering “professionalwork with better Quality
       </p>
     </div>
   </section>
+
+
+
+<section class="py-5 bg-light">
+  <div class="container text-center">
+    <h2 class="fw-bold mb-5">📊 Organization Structure</h2>
+
+    <!-- Level 1 -->
+    <div class="row justify-content-center mb-4">
+      <div class="col-md-4">
+        <div class="card shadow">
+          <div class="card-body bg-warning text-dark">
+            <h5 class="card-title mb-0">👑 Chairman</h5>
+            <p class="card-text small">Mohammed Saad Al Muhannadi</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Level 2 -->
+    <div class="row justify-content-center mb-4 g-4">
+      <div class="col-md-3">
+        <div class="card shadow h-100">
+          <div class="card-body">
+            <h6 class="card-title">🛠️ Managing Director</h6>
+            <p class="card-text small">Mehdi Hasan</p>
+          </div>
+        </div>
+      </div>
+
+
+    <!-- Level 3 -->
+    <div class="row justify-content-center g-4">
+      <div class="col-md-2">
+        <div class="card shadow-sm">
+          <div class="card-body text-center">
+            <h6 class="card-title">👷 Site Supervisors</h6>
+             <p class="card-text small">Mojammel Hossain</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="card shadow-sm">
+          <div class="card-body text-center">
+            <h6 class="card-title">👷 Procurement</h6>
+             <p class="card-text small">Nihar Ranjan Nath</p>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+</section>
+
 
   <!-- Mission and Values -->
   <section class="bg-light py-5">
@@ -81,7 +140,7 @@
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
-    <p class="mb-0">&copy; 2025 Construction Co. All rights reserved.</p>
+    <p class="mb-0">&copy; 2025 AL MUKTASHFGENERALCONTRACTING SERVICES. All rights reserved.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
