--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">🏗️ Construction Co.</a>
+       <a class="navbar-brand d-flex align-items-center" href="#">
+  <img src="images/logo.jpeg" alt="Logo" width="20" height="20" class="me-2">
+  AL MUKTASHF GENERAL CONTRACTING SERVICES
+</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,12 +39,18 @@
     <div class="container">
       <div class="row g-5">
 
+
         <!-- Contact Info -->
         <div class="col-md-5">
           <h4>Get in Touch</h4>
-          <p><i class="bi bi-geo-alt-fill text-warning me-2"></i> 123 Builder St, Dhaka, Bangladesh</p>
-          <p><i class="bi bi-envelope-fill text-warning me-2"></i> contact@constructionco.com</p>
-          <p><i class="bi bi-telephone-fill text-warning me-2"></i> +880 1234 567890</p>
+          <p><i class="bi bi-geo-alt-fill text-warning me-2"></i> BUILDING NO 87, STREET 920, WADI RASHEEDA
+ZONE: 24 AL MUNTAZA.</p>
+          <p><i class="bi bi-envelope-fill text-warning me-2"></i> almuktashfgcs@gmail.com</p>
+          <p><i class="bi bi-envelope-fill text-warning me-2"></i> Mehdihasan29405@gmail.com</p>
+          <p><i class="bi bi-envelope-fill text-warning me-2"></i> Mohammed.almuhannadi@gmail</p>
+          <p><i class="bi bi-telephone-fill text-warning me-2"></i> +974 77644640</p>
+          <p><i class="bi bi-telephone-fill text-warning me-2"></i> +974 50387355</p>
+          <p><i class="bi bi-telephone-fill text-warning me-2"></i> +974 55606007</p>
 
           <h5 class="mt-4">Working Hours</h5>
           <p>Sunday – Thursday: 9:00 AM – 6:00 PM</p>
@@ -51,7 +60,7 @@
         <!-- Contact Form -->
         <div class="col-md-7">
           <h4>Send Us a Message</h4>
-          <form>
+         <form id="contact-form">
             <div class="mb-3">
               <label for="name" class="form-label">Your Name</label>
               <input type="text" class="form-control" id="name" placeholder="John Doe" required />
@@ -76,7 +85,8 @@
   <section class="bg-light">
     <div class="container-fluid px-0">
       <iframe
-        src="https://maps.google.com/maps?q=dhaka&t=&z=13&ie=UTF8&iwloc=&output=embed"
+        src="https://maps.google.com/maps?q=BUILDING NO 87, STREET 920, WADI RASHEEDA
+ZONE: 24 AL MUNTAZA.&t=&z=13&ie=UTF8&iwloc=&output=embed"
         width="100%"
         height="350"
         style="border:0;"
@@ -89,9 +99,34 @@
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
-    <p class="mb-0">&copy; 2025 Construction Co. All rights reserved.</p>
+    <p class="mb-0">&copy; 2025 AL MUKTASHF GENERAL CONTRACTING SERVICES. All rights reserved.</p>
   </footer>
-
+<script src="js/page-loader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
+<script>
+  document.getElementById('contact-form').addEventListener('submit', function (event) {
+    event.preventDefault();
+
+    const form = event.target;
+    const name = form.name.value;
+    const email = form.email.value;
+    const message = form.message.value;
+
+    const subject = encodeURIComponent("Contact Form Message from " + name);
+    const body = encodeURIComponent(`Name: ${name}\nEmail: ${email}\nMessage: ${message}`);
+
+    // Mail will be sent TO this address
+    const mailTo = "almuktashfgcs@gmail.com";
+
+    // Construct mailto link
+    const mailtoLink = `mailto:${mailTo}?subject=${subject}&body=${body}`;
+
+    // Open user's default email app
+    window.location.href = mailtoLink;
+  });
+</script>
+
 </body>
 </html>
