--- a/gallery.html
+++ b/gallery.html
@@ -35,10 +35,10 @@
         <!-- Project Card 1 -->
         <div class="col-md-4">
           <div class="card shadow-sm">
-            <img src="images/project1.jpg" class="card-img-top" alt="Project 1">
+            <img src="images/site1.jpeg" class="card-img-top" alt="Project 1">
             <div class="card-body">
-              <h5 class="card-title">Modern Villa</h5>
-              <p class="card-text">A luxury villa with modern interior and exterior design.</p>
+              <h5 class="card-title">ZEKREET CAMP</h5>
+              <p class="card-text">ZEKREET CAMP DEVELOPMENT, DUKHAN. QATAR</p>
             </div>
           </div>
         </div>
@@ -46,9 +46,9 @@
         <!-- Project Card 2 -->
         <div class="col-md-4">
           <div class="card shadow-sm">
-            <img src="images/project2.jpg" class="card-img-top" alt="Project 2">
+            <img src="images/site2.jpeg" class="card-img-top" alt="Project 2">
             <div class="card-body">
-              <h5 class="card-title">Corporate Office</h5>
+              <h5 class="card-title">AL WAAB CITY</h5>
               <p class="card-text">Multi-story office building in the commercial district.</p>
             </div>
           </div>
@@ -59,51 +59,17 @@
           <div class="card shadow-sm">
             <img src="images/project3.jpg" class="card-img-top" alt="Project 3">
             <div class="card-body">
-              <h5 class="card-title">Shopping Complex</h5>
-              <p class="card-text">Modern shopping mall with sustainable design elements.</p>
+              <h5 class="card-title">LUSAIL VILLA</h5>
+              <p class="card-text">LUSAIL VILLA with sustainable design elements.</p>
             </div>
           </div>
         </div>
 
-        <!-- Project Card 4 -->
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="images/project4.jpg" class="card-img-top" alt="Project 4">
-            <div class="card-body">
-              <h5 class="card-title">Apartment Tower</h5>
-              <p class="card-text">High-rise apartments with panoramic city views.</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project Card 5 -->
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="images/project5.jpg" class="card-img-top" alt="Project 5">
-            <div class="card-body">
-              <h5 class="card-title">Warehouse Facility</h5>
-              <p class="card-text">Large-scale storage and logistics facility.</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project Card 6 -->
-        <div class="col-md-4">
-          <div class="card shadow-sm">
-            <img src="images/project6.jpg" class="card-img-top" alt="Project 6">
-            <div class="card-body">
-              <h5 class="card-title">School Campus</h5>
-              <p class="card-text">Newly built school with sports and science blocks.</p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section>
+      
 
  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
