--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Construction Co.</title>
+  <title>AL MUKTASHF GENERAL CONTRACTING SERVICES</title>
+
+  <!-- AOS CSS -->
+<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -11,40 +15,24 @@
   <link rel="stylesheet" href="css/custom.css" />
 </head>
 <body class="background">
-<div class="lines">
-  <div class="line"></div>
-  <div class="line"></div>
-  <div class="line"></div>
-  <div class="line"></div>
-  <div class="line"></div>
-  <div class="line"></div>
-  <div class="line"></div>
-  <div class="line"></div>
-  <div class="line"></div>
-  <div class="line"></div>
-</div>
-
-<span class="ball"></span>
-  <span class="ball"></span>
-  <span class="ball"></span>
-  <span class="ball"></span>
-  <span class="ball"></span>
-  <span class="ball"></span>
-
-
+  <div id="include-background"></div>
 
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">🏗️ Construction Co.</a>
+      <a class="navbar-brand d-flex align-items-center" href="#">
+  <img src="images/logo.jpeg" alt="Logo" width="20" height="20" class="me-2">
+  AL MUKTASHF GENERAL CONTRACTING SERVICES
+</a>
+      <!-- <a class="navbar-brand" href="#">🏗️ Construction Co.</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="index.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
@@ -52,8 +40,10 @@
     </div>
   </nav>
 
+  
+
   <!-- Banner Section -->
-<section class="banner">
+<section class="banner" >
   <div class="container text-center text-white d-flex align-items-center justify-content-center" style="height: 400px;">
     <div>
       <h1 class="display-4">Welcome to Construction Co.</h1>
@@ -69,7 +59,7 @@
 </section>
 
   <!-- Hero Section -->
-  <header class="bg-warning text-dark py-5 text-center">
+  <header class="bg-warning text-dark py-5 text-center" data-aos="zoom-in" data-aos-delay="200">
     <div class="container">
       <h1 class="display-4">Building the Future</h1>
       <p class="lead">We provide professional construction services with a focus on safety, quality, and on-time delivery.</p>
@@ -80,56 +70,28 @@
 
 
 
-  <div id="projects-service"></div>
+  <div id="projects-service" data-aos="zoom-in" data-aos-delay="200"></div>
   <div id="projects-gallery"></div>
 
 
 
  <!-- Footer -->
-<footer class="bg-dark text-white pt-4 pb-3">
-  <div class="container text-center text-md-start">
-    <div class="row">
-      
-      <!-- About -->
-      <div class="col-md-4 mb-4">
-        <h5>🏗️ Construction Co.</h5>
-        <p>Building your future with quality, safety, and speed.</p>
-      </div>
-
-      <!-- Quick Links -->
-      <div class="col-md-4 mb-4">
-        <h5>Quick Links</h5>
-        <ul class="list-unstyled">
-          <li><a href="#home" class="text-white text-decoration-none">Home</a></li>
-          <li><a href="#services" class="text-white text-decoration-none">Services</a></li>
-          <li><a href="#gallery" class="text-white text-decoration-none">Projects</a></li>
-          <li><a href="#contact" class="text-white text-decoration-none">Contact</a></li>
-        </ul>
-      </div>
-
-      <!-- Contact -->
-      <div class="col-md-4 mb-4">
-        <h5>Contact</h5>
-        <p>Email: contact@constructionco.com</p>
-        <p>Phone: +880 1234 567890</p>
-        <p>Dhaka, Bangladesh</p>
-      </div>
-
-    </div>
-  </div>
-
-  <hr class="border-secondary m-0" />
-
-  <div class="text-center py-2">
-    <p class="mb-0 small">&copy; 2025 Construction Co. All rights reserved.</p>
-  </div>
-</footer>
+<div id="include-footer"></div>
 
 <script src="js/page-loader.js"></script>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
+
+  <!-- AOS JS -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 1000, // Animation speed in ms
+    once: true      // Animate only once
+  });
+</script>
 </body>
 
 </html>
