--- a/projects.html
+++ b/projects.html
@@ -70,9 +70,9 @@
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#">
-  <img src="images/logo.jpeg" alt="Logo" width="20" height="20" class="me-2">
-  AL MUKTASHF GENERAL CONTRACTING SERVICES
-</a>
+        <img src="images/logo.jpeg" alt="Logo" width="20" height="20" class="me-2">
+        AL MUKTASHF GENERAL CONTRACTING SERVICES
+      </a>
       <!-- <a class="navbar-brand" href="#">🏗️ Construction Co.</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -266,6 +266,7 @@
 <footer class="bg-dark text-white text-center py-3">
   <p class="mb-0">&copy; 2025 Al Muktashf General Contracting. All rights reserved.</p>
 </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
